# hegg-patterns

./: CHANGELOG.md  README.md  flake.nix  hegg-patterns.cabal  hegg-patterns.nix
.github/workflows/: haskell-ci.yml
src/Data/Equality/Matching/Pattern/: Extras.hs
