cabal-version:        3.0
name:                 hegg-patterns
version:              0.1.0.0
synopsis:
  E-graph rewrite rules for common algebraic identities, for use with hegg.

description:
  E-graph [@Rewrite@ rules](https://hackage.haskell.org/package/hegg-0.4.0.0/docs/Data-Equality-Saturation-Rewrites.html#t:Rewrite)
  associated with common algebraic identities, for use with [hegg](https://hackage.haskell.org/package/hegg).

license:              MIT
license-file:         LICENSE
author:               Eric Meinhardt
maintainer:           ericmeinhardt@gmail.com
copyright:            2023
homepage:             https://github.com/emeinhardt/hegg-patterns
bug-reports:          https://github.com/emeinhardt/hegg-patterns/issues
category:             Data
build-type:           Simple
extra-doc-files:      CHANGELOG.md

tested-with:
  GHC ==9.6.2
   || ==9.6.1
   || ==9.4.5
   || ==9.2.8

source-repository head
  type:     git
  location: https://github.com/emeinhardt/hegg-patterns/hegg-patterns.git

common warnings
  ghc-options:
    -Wall -Wdefault -Wno-orphans -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

library
  import:             warnings
  default-language:   GHC2021
  default-extensions: UnicodeSyntax
  hs-source-dirs:     src
  exposed-modules:
    Data.Equality.Matching.Pattern.Extras
  build-depends:
        base    >= 4.16 && <5.0
      , hegg    == 0.4.*
